explain stacktrace in README